@@ -33,12 +33,18 @@ jobs:
           install_hole: [true, ]
           codecov: [true, ]
           include:
-            - name: macOS
+            - name: macOS_py39
               os: macOS-latest
-              python-version: 3.7
+              python-version: 3.9
               run_type: FULL
               install_hole: true
               codecov: true
+            - name: macOS_py36_min
+              os: macOS-latest
+              python-version: 3.6
+              run_type: MIN
+              install_hole: false
+              codecov: false
             - name: minimal-ubuntu
               os: ubuntu-latest
               python-version: 3.6
